# lexical-analyzer

./: AddAutomaton.h  Automaton.h  BlockCommentAutomaton.cpp  CMakeLists.txt  ColonAutomaton.h  End_Of_FileAutomaton.cpp  End_Of_FileAutomaton.h  FactsAutomaton.cpp  IDAutomaton.cpp  IDAutomaton.h  Left_ParenAutomaton.cpp  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  Q_MarkAutomaton.cpp  QueriesAutomaton.cpp  QueriesAutomaton.h  README.md  Right_ParenAutomaton.cpp  RulesAutomaton.cpp  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h  main.cpp
AutomataHeaders/: BlockCommentAutomaton.h  CommaAutomaton.h  FactsAutomaton.h  LineCommentAutomaton.h  MultiplyAutomaton.h  PeriodAutomaton.h  Q_MarkAutomaton.h  Right_ParenAutomaton.h  RulesAutomaton.h
AutomataSource/: AddAutomaton.cpp  BlockCommentAutomaton.cpp  ColonAutomaton.cpp  ColonDashAutomaton.cpp  CommaAutomaton.cpp  End_Of_FileAutomaton.cpp  FactsAutomaton.cpp  IDAutomaton.cpp  Left_ParenAutomaton.cpp  LineCommentAutomaton.cpp  MultiplyAutomaton.cpp  PeriodAutomaton.cpp  Q_MarkAutomaton.cpp  QueriesAutomaton.cpp  Right_ParenAutomaton.cpp  RulesAutomaton.cpp  SchemesAutomaton.cpp  StringAutomaton.cpp  UndefinedAutomaton.cpp
exampleInputFiles/: testInput.txt
